[project]
name = "ant"
version = "0.1.0"
description = "APIs and MCP Server for Enterprise Apps like Google, Notion, Hubspot..."
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
