[project]
name = "ant"
version = "0.0.0"
description = "APIs and MCP Server for Enterprise Apps like Google, Notion, Hubspot..."
readme = "README.md"
authors = [
    { name = "Aniket Maurya", email = "aniket@celesto.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
